--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
   "name": "odin-battleship",
   "version": "1.0.0",
+  "type": "module",
   "description": "## Assignment",
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage"
   },
-  "presets": [
-    "@babel/preset-env"
-  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
+    "esm": "^3.2.25",
     "jest": "^29.7.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   }
 }
