--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "## Assignment",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "build": "webpack --mode production",
+    "dev": "webpack serve --mode development --port 9000",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +18,6 @@
     "@babel/preset-env": "^7.26.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
-    "esm": "^3.2.25",
     "jest": "^29.7.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
