--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@babel/preset-env": "^7.26.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
