--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --coverage",
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development --port 9000",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "deploy": "npm run build && git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
